--- a/public/css/tasks.css
+++ b/public/css/tasks.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
@@ -8,91 +7,156 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-  }
+    flex-direction: column;
+}
+.todo-container {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: auto;
+  width: 60%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+}
+.todo-header {
+  color: #444;
+  text-align: center;
+  font-size: 1.2rem;
+}
+.moreTasks {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1rem;
+  padding: 9px 20px;
+  background-color: #444;
+  margin: 10px auto;
+}
+#todo-list {
+  list-style: none;
+  padding: 0;
+  align-items: center;
+  margin: 0;
+  width: 100%;
+}
+.todo-item {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  margin: 15px auto;
+  cursor:pointer;
+  color: #444;
+  border: 1px solid #ccc;
+  width: 90%;
+  border-radius: 5px;
+}
+.todo-item input[type="checkbox"] {
+  margin-right: 10px;
+}
+.todo-item.completed {
+  text-decoration: line-through;
+  color: #777;
+}
+.add-task {
+  list-style: none;
+  margin: 15px auto;
+  display: flex;
+  padding:  0 15px;
+  color: #444;  
+  border: 1px solid #ccc;
+  width: 90%;
+  border-radius: 5px;
+  /* border-bottom: 1px solid #ddd; */
+}
+.span_add {
+  padding: 15px;
+  width: 100%;
+}
+.add-task button {
+  background-color: #fff;
+  color: #fff;
+  border: none;
+  margin-right: -17px !important;
+  border: 1px solid #444;
+  background-color: #444;
+  margin: 0;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  cursor: pointer;
+  font-size: 2.5em;
+}
 
-  .todo-container {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: 450px;
-    height: 500px;
-    padding: 20px 15px;
+/* Modal */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.hr {
+    border: 0; 
+    height: 1px;
+    background-color: #aaa;
+    margin: 20px 0; 
+}
+.modal-content {
+  background-color: #fff;
+  margin: 10% auto;
+  width: 60%;
+  height: 40%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.close {
+  margin-top: 10px;
+}
+.modalh2 {
+  font-size: 1.2rem;
+  color:#222;
+}
+#taskForm {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 9px 20px;
+  padding-bottom: 0;
+}
+.modalDescriptionLabel {
+  color: #444;
+}
+.headModal {
+  padding: 9px 20px;
+  padding-bottom: 0;
+}
+#modalDescription {
+  margin: 10px 0;
+  padding: 12px 20px;
+  outline: none;
+}
+.modalbtn {
+  padding: 9px 20px;
+  border:none;
+  background-color: #444;
+  color: #fff;
+  cursor: pointer;
+}
 
-  }
-
-  .todo-header {
-    /* background-color: #3498db; */
-    color: #444;
-    text-align: center;
-    font-size: 1.2rem;
-  }
-
-  #todo-list {
-    list-style: none;
-    padding: 0;
-    align-items: center;
-    margin: 0;
-    width: 100%;
-  }
-
-  .todo-item {
-    display: flex;
-    align-items: center;
-    padding: 15px;
-    margin: 15px auto;
-
-    color: #444;
-    border: 1px solid #ccc;
-    width: 90%;
-    border-radius: 5px;
-    /* border-bottom: 1px solid #ddd; */
-  }
-
-  .todo-item input[type="checkbox"] {
-    margin-right: 10px;
-  }
-
-  .todo-item.completed {
-    text-decoration: line-through;
-    color: #777;
-  }
-
-  .add-task {
-    list-style: none;
-    padding: 0;
-
-    align-items: center;
-    margin: 0px auto;
-    display: flex;
-    width: 98%;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .span_add {
-    padding: 15px;
-    /* margin: 15px  0; */
-    margin: 0;
-    color: #444;
-    border: 1px solid #ccc;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    width: 100%;
-  }
-  
-
-
-  .add-task button {
-    background-color: #fff;
-    color: #fff;
-    border: none;
-    border: 1px solid #444;
-    background-color: #444;
-    /* margin: 10px 0; */
-    margin: 0;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    cursor: pointer;
-    font-size: 2.5em;
-  }
+::-webkit-scrollbar {
+  display:none;
+}
